# mlops_test

./: Dockerfile  model.joblib  pyproject.toml  requirements.txt  training_model.py
.github/workflows/: ci.yml
app/: main.py  training_model.py
